--- a/index.html
+++ b/index.html
@@ -2,9 +2,204 @@
 <html>
 <head>
   <title>Test API</title>
+  <!-- Import design system tokens and theme first -->
+  <link rel="stylesheet" href="./ui/styles/index.css">
+  <!-- Import component styles -->
+  <link rel="stylesheet" href="./ui/src/components/Navigation/Navigation.css">
+  <link rel="stylesheet" href="./ui/src/components/Button/Button.css">
+  <link rel="stylesheet" href="./ui/src/components/Icon/Icon.css">
+  <link rel="stylesheet" href="./ui/src/components/Video/Video.css">
+  <link rel="stylesheet" href="./ui/src/components/Grid/Grid.css">
+  <link rel="stylesheet" href="./ui/src/components/Image/Image.css">
+  <link rel="stylesheet" href="./ui/src/components/Typography/Typography.css">
+  <link rel="stylesheet" href="./ui/src/components/Radio/Radio.css">
+  <link rel="stylesheet" href="./ui/src/components/Radio/RadioButtonGroup.css">
+  <link rel="stylesheet" href="./ui/src/components/Switch/Switch.css">
+  <link rel="stylesheet" href="./ui/src/components/Select/Select.css">
 </head>
 <body>
-  <h1>API Test Page</h1>
+  <nav class="navigation">
+    <div class="navigation__container">
+      <!-- Left: Navigation Links -->
+      <div class="navigation__left">
+        <button class="btn btn--tertiary btn--mini">shop</button>
+        <button class="btn btn--tertiary btn--mini">quality</button>
+        <button class="btn btn--tertiary btn--mini">snif society</button>
+      </div>
+
+      <!-- Center: Logo -->
+      <div class="navigation__center">
+        <a href="/" class="navigation__logo-link">
+          <div class="navigation__logo-container">
+            <svg class="navigation__logo" width="123" height="56" viewBox="0 0 123 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25.1231 29.1234C23.2352 28.1117 20.6114 27.4373 18.5217 27.4373C17.1047 27.4373 14.6828 28.0443 14.6828 29.802C14.6828 32.1668 18.5217 32.504 20.2036 32.8412C25.9262 33.9878 30.2402 36.6898 30.2402 43.1055C30.2402 52.2189 21.9569 56 13.9428 56C9.02748 56 4.17526 54.5837 0 52.0166L4.44436 43.4427C6.93775 45.1962 11.113 46.954 14.1446 46.954C15.6919 46.954 17.9835 46.2121 17.9835 44.3195C17.9835 41.6175 14.1446 41.4826 10.3057 40.4709C6.46682 39.4592 2.62794 37.5666 2.62794 31.3575C2.62794 22.851 10.3057 19.0699 17.8489 19.0699C21.7551 19.0699 25.6613 19.6769 29.2311 21.2998L25.1231 29.1234Z" fill="currentColor"></path>
+              <path d="M87.8277 6.90884C87.8277 10.69 84.7288 13.7966 80.9572 13.7966C77.1856 13.7966 74.0868 10.69 74.0868 6.90884C74.0868 3.12774 77.1856 0.0210764 80.9572 0.0210764C84.7288 0.0210764 87.8277 3.12774 87.8277 6.90884ZM87.0877 54.8492H74.831V20.3261H87.0877V54.8492Z" fill="currentColor"></path>
+              <path d="M35.7315 20.3177L35.6895 54.8492H48.1648V36.1039C48.1648 36.1039 47.9251 31.9771 51.9743 31.9265C55.317 31.8844 56.242 33.5705 56.5195 35.3704C56.57 35.7119 56.591 36.0575 56.5952 36.3989L56.7928 54.845H69.1252V32.0825L69.0664 28.0611C68.9865 22.3958 63.1798 18.1257 56.9905 19.2343C54.3583 19.7064 52.0962 21.4052 50.7675 23.732C50.0569 24.9713 49.3127 26.2907 48.9385 27.4246H48.4129L45.3182 20.3177H35.7315Z" fill="currentColor"></path>
+              <path d="M112.497 14.2561C112.497 11.6215 113.888 9.91856 116.512 9.91856C118.135 9.91856 119.447 10.5382 120.296 11.2379L123 1.86315C120.608 0.543771 117.828 0 114.813 0C105.698 0 99.8237 5.11313 99.8237 15.1076V20.3261H92.6421V30.9697H99.8237V54.845H112.497V30.9739H119.767V20.3261H112.497V14.2561Z" fill="currentColor"></path>
+            </svg>
+          </div>
+        </a>
+      </div>
+
+      <!-- Right: Icon Buttons -->
+      <div class="navigation__right">
+        <button class="btn btn--tertiary btn--circle btn--small">
+          <span class="icon">search</span>
+        </button>
+        <button class="btn btn--tertiary btn--circle btn--small">
+          <span class="icon">shopping_bag</span>
+        </button>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Full Bleed 16:9 Video - Autoplay, No Controls -->
+  <div class="video-full-bleed">
+    <div class="video-aspect video-aspect--16-9">
+      <video
+        class="video"
+        src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+        autoplay
+        muted
+        loop
+        playsinline>
+      </video>
+    </div>
+  </div>
+
+  <!-- Product Page Grid -->
+  <div style="max-width: var(--grid-max-width); margin-inline: auto; padding: var(--space-3xl) var(--grid-gutter);">
+    <div style="display: grid; grid-template-columns: repeat(12, 1fr); gap: var(--grid-gutter);">
+
+      <!-- Left: Product Image -->
+      <div style="grid-column: span 6;">
+        <div class="img-aspect img-aspect--1-1">
+          <img src="https://picsum.photos/800/800?random=1" alt="Product Image" class="img--cover">
+        </div>
+      </div>
+
+      <!-- Right: Product Details -->
+      <div style="grid-column: span 6; display: flex; flex-direction: column; gap: var(--space-l);">
+
+        <!-- Product Info -->
+        <div>
+          <h2 style="font-family: var(--font-sans); font-size: var(--step-3); font-weight: 700; margin: 0 0 var(--space-s) 0; color: var(--color-on-surface);">
+            me
+          </h2>
+          <p style="font-family: var(--font-sans); font-size: var(--step-0); line-height: 1.6; margin: 0 0 var(--space-m) 0; color: var(--color-on-surface-variant);">
+            woody, musky, fruity
+          </p>
+          <p style="font-family: var(--font-sans); font-size: var(--step-2); font-weight: 600; margin: 0; color: var(--color-primary);">
+            $55
+          </p>
+        </div>
+
+        <!-- Size Selection -->
+        <div class="button-group">
+          <fieldset class="button-group__fieldset">
+            <legend class="button-group__legend">Select Size</legend>
+            <div class="button-group__buttons">
+              <div class="button-group__button">
+                <input type="radio" name="size" id="size-10ml" value="10ml" class="button-group__input" />
+                <label for="size-10ml" class="button-group__label button-group__label--secondary button-group__label--medium button-group__label--pill">
+                  10 ml mini
+                </label>
+              </div>
+              <div class="button-group__button">
+                <input type="radio" name="size" id="size-30ml" value="30ml" class="button-group__input" checked />
+                <label for="size-30ml" class="button-group__label button-group__label--secondary button-group__label--medium button-group__label--pill">
+                  30 ml
+                </label>
+              </div>
+              <div class="button-group__button">
+                <input type="radio" name="size" id="size-30ml-sample" value="30ml-sample" class="button-group__input" />
+                <label for="size-30ml-sample" class="button-group__label button-group__label--secondary button-group__label--medium button-group__label--pill">
+                  30 ml + sample
+                </label>
+              </div>
+            </div>
+          </fieldset>
+        </div>
+
+        <!-- Purchase Type -->
+        <fieldset class="switch-group">
+          <legend class="switch-group__legend">Purchase Type</legend>
+          <div class="switch-group__switches">
+            <label class="switch">
+              <input
+                type="checkbox"
+                role="switch"
+                class="switch__input"
+                id="purchase-subscribe"
+                name="purchase-type"
+                value="subscribe"
+                aria-checked="false"
+                aria-describedby="purchase-subscribe-desc"
+              />
+              <span class="switch__track switch__track--medium">
+                <span class="switch__thumb"></span>
+              </span>
+              <span class="switch__label-content">
+                <span class="switch__label-text">Subscribe & Save</span>
+                <span class="switch__description" id="purchase-subscribe-desc">
+                  Get 15% off with subscription
+                </span>
+              </span>
+            </label>
+          </div>
+        </fieldset>
+
+        <!-- Delivery Frequency -->
+        <div class="select-field select-field--medium select-field--secondary">
+          <label for="frequency" class="select-field__label">
+            Delivery Frequency
+          </label>
+          <div class="select-field__wrapper">
+            <select
+              id="frequency"
+              class="select-field__select"
+              aria-describedby="frequency-helper"
+            >
+              <option value="once">One-time purchase</option>
+              <option value="3months">Every 3 months</option>
+              <option value="6months">Every 6 months</option>
+            </select>
+          </div>
+          <span id="frequency-helper" class="select-field__helper">
+            Choose how often you'd like to receive this product
+          </span>
+        </div>
+
+        <!-- Add to Cart Button -->
+        <button class="btn btn--primary btn--large" style="width: 100%;">
+          Add to Cart
+        </button>
+
+      </div>
+    </div>
+  </div>
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: var(--color-background);
+    }
+
+    .video-full-bleed {
+      width: 100vw;
+      position: relative;
+      left: 50%;
+      right: 50%;
+      margin-left: -50vw;
+      margin-right: -50vw;
+    }
+
+    .video-full-bleed .video-aspect {
+      border-radius: 0;
+    }
+  </style>
+
   <button onclick="testApi()">Call /api/hello</button>
   <pre id="result"></pre>
   <script>
