Add responsive hero video and update navigation layout
Replaces the hero image with a responsive video supporting desktop and mobile sources. Updates navigation to use a 3-column CSS grid, introduces a logo image, and adjusts navigation link/button styles for better responsiveness. Adds video and image assets, and updates MIME types in the API to serve video files.

--- a/index.html
+++ b/index.html
@@ -31,28 +31,18 @@
 
   <nav class="navigation">
     <div class="navigation__container">
-      <!-- Left: Navigation Links -->
       <div class="navigation__left">
-        <button class="btn btn--tertiary btn--mini">shop</button>
-        <button class="btn btn--tertiary btn--mini">quality</button>
-        <button class="btn btn--tertiary btn--mini">snif society</button>
+        <button class="btn btn--tertiary btn--small">shop</button>
+        <button class="btn btn--tertiary btn--small">quality</button>
+        <button class="btn btn--tertiary btn--small">snif society</button>
       </div>
-
-      <!-- Center: Logo -->
       <div class="navigation__center">
         <a href="/" class="navigation__logo-link">
           <div class="navigation__logo-container">
-            <svg class="navigation__logo" width="123" height="56" viewBox="0 0 123 56" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M25.1231 29.1234C23.2352 28.1117 20.6114 27.4373 18.5217 27.4373C17.1047 27.4373 14.6828 28.0443 14.6828 29.802C14.6828 32.1668 18.5217 32.504 20.2036 32.8412C25.9262 33.9878 30.2402 36.6898 30.2402 43.1055C30.2402 52.2189 21.9569 56 13.9428 56C9.02748 56 4.17526 54.5837 0 52.0166L4.44436 43.4427C6.93775 45.1962 11.113 46.954 14.1446 46.954C15.6919 46.954 17.9835 46.2121 17.9835 44.3195C17.9835 41.6175 14.1446 41.4826 10.3057 40.4709C6.46682 39.4592 2.62794 37.5666 2.62794 31.3575C2.62794 22.851 10.3057 19.0699 17.8489 19.0699C21.7551 19.0699 25.6613 19.6769 29.2311 21.2998L25.1231 29.1234Z" fill="currentColor"></path>
-              <path d="M87.8277 6.90884C87.8277 10.69 84.7288 13.7966 80.9572 13.7966C77.1856 13.7966 74.0868 10.69 74.0868 6.90884C74.0868 3.12774 77.1856 0.0210764 80.9572 0.0210764C84.7288 0.0210764 87.8277 3.12774 87.8277 6.90884ZM87.0877 54.8492H74.831V20.3261H87.0877V54.8492Z" fill="currentColor"></path>
-              <path d="M35.7315 20.3177L35.6895 54.8492H48.1648V36.1039C48.1648 36.1039 47.9251 31.9771 51.9743 31.9265C55.317 31.8844 56.242 33.5705 56.5195 35.3704C56.57 35.7119 56.591 36.0575 56.5952 36.3989L56.7928 54.845H69.1252V32.0825L69.0664 28.0611C68.9865 22.3958 63.1798 18.1257 56.9905 19.2343C54.3583 19.7064 52.0962 21.4052 50.7675 23.732C50.0569 24.9713 49.3127 26.2907 48.9385 27.4246H48.4129L45.3182 20.3177H35.7315Z" fill="currentColor"></path>
-              <path d="M112.497 14.2561C112.497 11.6215 113.888 9.91856 116.512 9.91856C118.135 9.91856 119.447 10.5382 120.296 11.2379L123 1.86315C120.608 0.543771 117.828 0 114.813 0C105.698 0 99.8237 5.11313 99.8237 15.1076V20.3261H92.6421V30.9697H99.8237V54.845H112.497V30.9739H119.767V20.3261H112.497V14.2561Z" fill="currentColor"></path>
-            </svg>
+            <img src="/assets/logo.png" alt="LIQABLE Logo" class="navigation__logo">
           </div>
         </a>
       </div>
-
-      <!-- Right: Icon Buttons -->
       <div class="navigation__right">
         <button class="btn btn--tertiary btn--circle btn--small">
           <span class="icon">search</span>
@@ -64,10 +54,20 @@
     </div>
   </nav>
 
-  <!-- Full Bleed 16:9 Hero Image -->
-  <div class="hero-image-full-bleed">
-    <div class="img-aspect img-aspect--16-9">
-      <img src="https://picsum.photos/1600/900?random=100" alt="Hero Image" class="img--cover">
+  <!-- Full Bleed Hero Video - Responsive Sources -->
+  <div class="hero-image-full-bleed" style="transform: translateY(calc(var(--step-4) * -1));">
+    <div class="video-aspect">
+      <video class="video" autoplay muted loop playsinline>
+        <!-- Desktop video: 16:9 landscape -->
+        <source
+          src="/assets/hero_d.mp4"
+          type="video/mp4"
+          media="(min-width: 768px)">
+        <!-- Mobile video: 9:16 portrait -->
+        <source
+          src="/assets/hero_m.mp4"
+          type="video/mp4">
+      </video>
     </div>
   </div>
 
