Update branding and product details for LIQABLE
Rebranded the page from 'Snif - Me Fragrance' to 'LIQABLE - Flavored top coat'. Updated product selection from size options to flavor options, revised FAQ content to reflect new product features, and adjusted ingredient and policy descriptions to match the new brand and product focus.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Snif - Me Fragrance</title>
+  <title>LIQABLE - Flavored top coat</title>
   <!-- Import page-specific styles (includes all design system tokens) -->
   <link rel="stylesheet" href="./index.css">
   <!-- Import component-specific styles -->
@@ -101,27 +101,27 @@
             <p class="type-price">$55</p>
           </div>
 
-          <!-- Size Selection -->
+          <!-- Flavor Selection -->
           <div class="button-group">
             <fieldset class="button-group__fieldset">
-              <legend class="button-group__legend">Select Size</legend>
+              <legend class="button-group__legend">Add the flavor</legend>
               <div class="button-group__buttons">
                 <div class="button-group__button">
-                  <input type="radio" name="size" id="size-10ml" value="10ml" class="button-group__input" />
-                  <label for="size-10ml" class="button-group__label button-group__label--secondary button-group__label--medium button-group__label--pill">
-                    10 ml mini
+                  <input type="checkbox" name="flavor" id="flavor-cherry" value="cherry-pop" class="button-group__input" />
+                  <label for="flavor-cherry" class="button-group__label button-group__label--secondary button-group__label--medium button-group__label--pill">
+                    cherry pop
                   </label>
                 </div>
                 <div class="button-group__button">
-                  <input type="radio" name="size" id="size-30ml" value="30ml" class="button-group__input" checked />
-                  <label for="size-30ml" class="button-group__label button-group__label--secondary button-group__label--medium button-group__label--pill">
-                    30 ml
+                  <input type="checkbox" name="flavor" id="flavor-vanilla" value="vanilla-vanity" class="button-group__input" />
+                  <label for="flavor-vanilla" class="button-group__label button-group__label--secondary button-group__label--medium button-group__label--pill">
+                    Vanilla Vanity
                   </label>
                 </div>
                 <div class="button-group__button">
-                  <input type="radio" name="size" id="size-30ml-sample" value="30ml-sample" class="button-group__input" />
-                  <label for="size-30ml-sample" class="button-group__label button-group__label--secondary button-group__label--medium button-group__label--pill">
-                    30 ml + sample
+                  <input type="checkbox" name="flavor" id="flavor-honey" value="money-honey" class="button-group__input" />
+                  <label for="flavor-honey" class="button-group__label button-group__label--secondary button-group__label--medium button-group__label--pill">
+                    Money Honey
                   </label>
                 </div>
               </div>
@@ -244,44 +244,32 @@
           <div class="faq faq--medium faq--surface">
             <details class="faq__item">
               <summary class="faq__question">
-                <span class="faq__question-text">Clean Formula</span>
+                <span class="faq__question-text">clean formula</span>
                 <span class="icon faq__icon">expand_more</span>
               </summary>
               <div class="faq__answer">
-                <p>All our fragrances are vegan, cruelty-free, and formulated with industry clean standards. They are made without parabens, preservatives, phthalates, or synthetic dyes inside.</p>
+                <p>All LIQIT top coats are vegan, cruelty-free, and made with safe, edible ingredients. Our polishes are free from parabens, phthalates, synthetic dyes, and harsh chemicals—crafted to shine on your nails and taste good on your lips.</p>
               </div>
             </details>
 
             <details class="faq__item">
               <summary class="faq__question">
-                <span class="faq__question-text">Lasting Power</span>
+                <span class="faq__question-text">lasting power</span>
                 <span class="icon faq__icon">expand_more</span>
               </summary>
               <div class="faq__answer">
-                <p>Our fragrances are eau de toilettes that are formulated for optimal performance and long-lasting, daily wear without being overwhelming.</p>
+                <p>Our top coats are designed to deliver salon-level gloss and durability. Expect days of chip-resistant shine, plus flavor that lingers with every lick.</p>
               </div>
             </details>
 
             <details class="faq__item">
               <summary class="faq__question">
-                <span class="faq__question-text">Ingredients</span>
+                <span class="faq__question-text">ingredients</span>
                 <span class="icon faq__icon">expand_more</span>
               </summary>
               <div class="faq__answer">
-                <p><strong>Alcohol, Fragrance*, Water.</strong></p>
-                <p>*Our scents are made with a high-end blend of natural ingredients and safe synthetics. While our formulas are nut-free, if you're concerned about potential allergens, please email us at hello@snif.co</p>
-              </div>
-            </details>
-
-            <details class="faq__item">
-              <summary class="faq__question">
-                <span class="faq__question-text">Return Policy</span>
-                <span class="icon faq__icon">expand_more</span>
-              </summary>
-              <div class="faq__answer">
-                <p>30 ml fragrances include a free 2 ml sample fragrance. Please use this sample as a tester to ensure that you enjoy the scent before opening the full-size bottle.</p>
-                <p>30 ml fragrances may be returned as long as they are in their original seal and packaging, unused, and are in "good as new" condition.</p>
-                <p><strong>Note:</strong> 10 ml fragrances do not come with a sample and cannot be returned if opened.</p>
+                <p><strong>Purified Water · Food-Grade Flavors · Plant-Based Film Formers · Natural Colorants · Vegetable Glycerin · Safe Preservatives</strong></p>
+                <p>Our flavors are crafted with a blend of natural extracts and safe synthetics. While our formulas are nut-free, if you're concerned about potential allergens, please email us at hello@liqit.co</p>
               </div>
             </details>
           </div>
