--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
           <!-- Product Info -->
           <div class="product-info">
-            <h2 class="type-heading-2">me</h2>
-            <p class="type-body">woody, musky, fruity</p>
+            <h2 class="type-heading-2">Liqit Topcoat</h2>
+            <p class="type-body">Flavored top coat that looks top-shelf, and is totally safe to taste. Each flavor is crafted to dry smooth, shine strong, and linger sweet.</p>
             <p class="type-price">$55</p>
           </div>
 
@@ -107,74 +107,25 @@
               <legend class="button-group__legend">Add the flavor</legend>
               <div class="button-group__buttons">
                 <div class="button-group__button">
-                  <input type="checkbox" name="flavor" id="flavor-cherry" value="cherry-pop" class="button-group__input" />
+                  <input type="radio" name="flavor" id="flavor-cherry" value="cherry-pop" class="button-group__input" />
                   <label for="flavor-cherry" class="button-group__label button-group__label--secondary button-group__label--medium button-group__label--pill">
-                    cherry pop
+                    Cherry Pop
                   </label>
                 </div>
                 <div class="button-group__button">
-                  <input type="checkbox" name="flavor" id="flavor-vanilla" value="vanilla-vanity" class="button-group__input" />
+                  <input type="radio" name="flavor" id="flavor-vanilla" value="vanilla-vanity" class="button-group__input" />
                   <label for="flavor-vanilla" class="button-group__label button-group__label--secondary button-group__label--medium button-group__label--pill">
                     Vanilla Vanity
                   </label>
                 </div>
                 <div class="button-group__button">
-                  <input type="checkbox" name="flavor" id="flavor-honey" value="money-honey" class="button-group__input" />
+                  <input type="radio" name="flavor" id="flavor-honey" value="money-honey" class="button-group__input" />
                   <label for="flavor-honey" class="button-group__label button-group__label--secondary button-group__label--medium button-group__label--pill">
                     Money Honey
                   </label>
                 </div>
               </div>
             </fieldset>
-          </div>
-
-          <!-- Purchase Type -->
-          <fieldset class="switch-group">
-            <legend class="switch-group__legend">Purchase Type</legend>
-            <div class="switch-group__switches">
-              <label class="switch">
-                <input
-                  type="checkbox"
-                  role="switch"
-                  class="switch__input"
-                  id="purchase-subscribe"
-                  name="purchase-type"
-                  value="subscribe"
-                  aria-checked="false"
-                  aria-describedby="purchase-subscribe-desc"
-                />
-                <span class="switch__track switch__track--medium">
-                  <span class="switch__thumb"></span>
-                </span>
-                <span class="switch__label-content">
-                  <span class="switch__label-text">Subscribe & Save</span>
-                  <span class="switch__description" id="purchase-subscribe-desc">
-                    Get 15% off with subscription
-                  </span>
-                </span>
-              </label>
-            </div>
-          </fieldset>
-
-          <!-- Delivery Frequency -->
-          <div class="select-field select-field--medium select-field--secondary select-field--pill">
-            <label for="frequency" class="select-field__label">
-              Delivery Frequency
-            </label>
-            <div class="select-field__wrapper">
-              <select
-                id="frequency"
-                class="select-field__select"
-                aria-describedby="frequency-helper"
-              >
-                <option value="once">One-time purchase</option>
-                <option value="3months">Every 3 months</option>
-                <option value="6months">Every 6 months</option>
-              </select>
-            </div>
-            <span id="frequency-helper" class="select-field__helper">
-              Choose how often you'd like to receive this product
-            </span>
           </div>
 
           <!-- Add to Cart Button -->
@@ -200,7 +151,13 @@
         <div class="col-span-12 col-span-md-6 product-content">
           <!-- Product info Writeup -->
           <h2 class="type-heading-3">at a first glance</h2>
-          <p class="type-body">This shape-shifting scent reflects your skin's unique chemistry. It starts with a hint of plum, peach skin, and white moss before settling into a musky blend of orris and sandalwood. It's not you, it's Me. <br/> NOTE: All 30 ml Me fragrance orders include a free 2 ml sample fragrance.</p>
+          <ul >
+              <li class="type-body">Long-lasting top coat</li>
+              <li class="type-body">Safe, non-toxic</li>
+              <li class="type-body">Vegan + cruelty-free</li>
+              <li class="type-body">Quick-dry formula</li>
+              <li class="type-body">infused with natural extracts and food-grade aromas</li>
+          </ul>
 
           <!-- Fragrance Notes -->
           <div class="button-tags">
